header component and some base stylings.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
     <title><%= current_page.data.title || "Simple Middleman+VueJS Setup" %></title>
     <%= stylesheet_link_tag "site" %>
   </head>
-  <body>
+  <body class="top">
     <%= yield %>
     <%= javascript_include_tag "site.bundle" %>
   </body>
