--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -4,3 +4,68 @@
     flex-grow:0;
   }
 }
+
+::selection {
+  background:#df91ad; /* Safari */
+}
+
+::-moz-selection {
+  background:#df91ad; /* Firefox */
+}
+
+html {
+  font-family: aktiv-grotesk, sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  font-size:100%;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+body.top {
+  background-color: #1a1427;
+  margin-left: 0px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+
+  &:after {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  
+    content: "";
+    background-image: url(../images/noise.gif);
+    opacity: .05;
+    z-index: 100000;
+    pointer-events: none;
+  }
+  
+  &.detail {
+    background-color: #1a1427;
+
+    &:after {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      content: "";
+      background-image: url(../images/noise.gif);
+      opacity: .05;
+      z-index: 10;
+    }
+  }
+}
+
+.pc{display: block;}
+.sp{display: none;}
